Additional work on localization  #21 Standardizing the Resource names. Converted more text to resources. Fixed issue in release build in clearing satellite resources from build output.

--- a/Main/SEToolbox/SEToolbox/Views/ControlSaveState.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlSaveState.xaml
@@ -25,7 +25,7 @@
             </Border.Background>
             <Grid Margin="4,0,4,0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{lex:Loc SEToolbox:Resources:UnsavedCtlState}" ToolTip="{lex:Loc SEToolbox:Resources:UnsavedCtlStateTooltip}" Foreground="Black" />
+                    <TextBlock Text="{lex:Loc CtlUnsavedStateTitle}" ToolTip="{lex:Loc CtlUnsavedStateTooltip}" Foreground="Black" />
                 </StackPanel>
             </Grid>
         </Border>
